--- a/Http_Requests/Starting_Project/package.json
+++ b/Http_Requests/Starting_Project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "behind-scenes",
+  "name": "data-fetching",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@million/lint": "^1.0.14",
-    "million": "^3.1.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
